Added possibility to open a specific photo
